tests/fixtures/fail/layout_intrinsic_wrong_label.sali
let main(): i32 = {
  let size = align_of(Value: i32)
  0
}
